// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OpenFoodFacts /> render correctly 1`] = `
<View
  ref={null}
  style={
    {
      "alignContent": "center",
      "paddingHorizontal": 16,
      "paddingVertical": 28,
    }
  }
>
  <RCTText
    center={true}
    testID="Link"
    url="https://world.openfoodfacts.org/"
  >
    Data from OPEN FOOD FACTS
  </RCTText>
  <View
    ref={null}
    style={
      {
        "flexDirection": "row",
        "maxHeight": 60,
        "paddingTop": 14,
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        source={
          {
            "testUri": "../../../assets/images/open-food-fact/nutriscore-a.png",
          }
        }
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        source={
          {
            "testUri": "../../../assets/images/open-food-fact/nova-unknown.png",
          }
        }
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        source={
          {
            "testUri": "../../../assets/images/open-food-fact/ecoscore-a.png",
          }
        }
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`<OpenFoodFacts /> render nothing if bad data passed 1`] = `
<View
  ref={null}
  style={
    {
      "alignContent": "center",
      "paddingHorizontal": 16,
      "paddingVertical": 28,
    }
  }
>
  <RCTText
    center={true}
    testID="Link"
    url="https://world.openfoodfacts.org/"
  >
    Data from OPEN FOOD FACTS
  </RCTText>
  <View
    ref={null}
    style={
      {
        "flexDirection": "row",
        "maxHeight": 60,
        "paddingTop": 14,
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        source={
          {
            "testUri": "../../../assets/images/open-food-fact/nutriscore-unknown.png",
          }
        }
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        source={
          {
            "testUri": "../../../assets/images/open-food-fact/nova-unknown.png",
          }
        }
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        source={
          {
            "testUri": "../../../assets/images/open-food-fact/ecoscore-unknown.png",
          }
        }
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`<OpenFoodFacts /> render nothing if no data passed 1`] = `
<View
  ref={null}
  style={
    {
      "alignContent": "center",
      "paddingHorizontal": 16,
      "paddingVertical": 28,
    }
  }
>
  <RCTText
    center={true}
    testID="Link"
    url="https://world.openfoodfacts.org/"
  >
    Data from OPEN FOOD FACTS
  </RCTText>
  <View
    ref={null}
    style={
      {
        "flexDirection": "row",
        "maxHeight": 60,
        "paddingTop": 14,
      }
    }
  >
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
    <TouchableOpacity
      onPress={[Function]}
      ref={null}
      style={
        {
          "flex": 1,
        }
      }
    >
      <Image
        ref={null}
        resizeMode="contain"
        style={
          {
            "alignSelf": "center",
            "maxHeight": 60,
            "width": "100%",
          }
        }
      />
    </TouchableOpacity>
  </View>
</View>
`;
